[gd_scene load_steps=4 format=3 uid="uid://pkw13dg40idk"]

[ext_resource type="Texture2D" uid="uid://cgwoficcpujbi" path="res://assets/art/GUI/victory_screen/crown.png" id="1_08dfi"]
[ext_resource type="Script" path="res://menu_scenes/victory_screen/victory_screen.gd" id="1_jbn32"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xeg2"]
bg_color = Color(0, 0, 0, 1)

[node name="victory_screen" type="Node2D"]
script = ExtResource("1_jbn32")

[node name="crown" type="Sprite2D" parent="."]
position = Vector2(957.75, 544.25)
scale = Vector2(3.73535, 2.12793)
texture = ExtResource("1_08dfi")

[node name="bg" type="Panel" parent="."]
offset_right = 1940.0
offset_bottom = 1080.0

[node name="victory_text" type="Label" parent="."]
offset_left = 419.0
offset_top = 6.0
offset_right = 630.0
offset_bottom = 55.0
scale = Vector2(5.26459, 5.28767)
text = "Congratulations!
You have beaten the game!"
horizontal_alignment = 1

[node name="quit_button" type="TextureButton" parent="."]
offset_left = 396.0
offset_top = 833.0
offset_right = 1545.0
offset_bottom = 1054.0

[node name="quit_bg" type="Panel" parent="quit_button"]
layout_mode = 0
offset_left = -6.0
offset_top = -10.0
offset_right = 1153.0
offset_bottom = 225.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1xeg2")

[node name="victory_text" type="Label" parent="quit_button"]
layout_mode = 0
offset_left = 176.0
offset_top = 34.9999
offset_right = 333.0
offset_bottom = 57.9999
scale = Vector2(5.26459, 5.28767)
text = "Leave to Main Menu"
horizontal_alignment = 1

[connection signal="mouse_entered" from="quit_button" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="quit_button" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
